[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=1]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=2]
[ext_resource path="res://scripts/SettingsGUIPanel.gd" type="Script" id=3]
[ext_resource path="res://assets/toggle_switch_on.png" type="Texture" id=4]
[ext_resource path="res://assets/toggle_switch_off.png" type="Texture" id=5]
[ext_resource path="res://themes/vrworkout_theme.theme" type="Theme" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 0.05, 1 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 4, 2 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 3 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 512 )
msaa = 6
render_target_v_flip = true
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="Viewport"]

[node name="ColorRect" type="ColorRect" parent="Viewport/CanvasLayer"]
margin_right = 1024.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )

[node name="HoldCue" type="Label" parent="Viewport/CanvasLayer"]
margin_left = 64.0
margin_right = 173.0
margin_bottom = 35.0
theme = ExtResource( 6 )
text = "Hold Cues"

[node name="HoldCueButton" type="CheckButton" parent="Viewport/CanvasLayer/HoldCue"]
margin_left = -64.0
margin_top = 32.0
margin_right = 309.0
margin_bottom = 168.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 6 )
custom_icons/off = ExtResource( 5 )
custom_icons/on = ExtResource( 4 )

[node name="Parcour" type="Label" parent="Viewport/CanvasLayer"]
margin_left = 64.0
margin_top = 100.0
margin_right = 173.0
margin_bottom = 135.0
theme = ExtResource( 6 )
text = "Parcour"

[node name="ParcourButton" type="CheckButton" parent="Viewport/CanvasLayer/Parcour"]
margin_left = -64.0
margin_top = 32.0
margin_right = 309.0
margin_bottom = 168.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 6 )
custom_icons/off = ExtResource( 5 )
custom_icons/on = ExtResource( 4 )

[node name="Youtube" type="Button" parent="Viewport/CanvasLayer"]
margin_left = 840.0
margin_top = 440.0
margin_right = 1011.0
margin_bottom = 504.0
theme = ExtResource( 6 )
text = "Activate Youtube"

[node name="StaticBody" type="StaticBody" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0504304, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="tl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1 )

[node name="bl_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 1 )

[node name="tr_marker" type="Spatial" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -1 )

[connection signal="pressed" from="Viewport/CanvasLayer/HoldCue/HoldCueButton" to="." method="_on_HoldCueButton_pressed"]
[connection signal="pressed" from="Viewport/CanvasLayer/Parcour/ParcourButton" to="." method="_on_ParcourButton_pressed"]
[connection signal="pressed" from="Viewport/CanvasLayer/Youtube" to="." method="_on_Youtube_pressed"]
[connection signal="interface_release" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="StaticBody" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
